# sim_iCLIP

./: README.md
examples/: normal_mean165_sd50_tp20.txt
src/: CMakeLists.txt  sim_iclip.cpp  sim_iclip.h
